first-feature-spec-happy-path

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav>
+  <div class="container-fluid">
+    <div class="navbar navbar-default">
+      <div class="collapse navbar-collapse navbar-ex1-collapse">
+        <ul class="nav navbar-nav">
+          <li><%= link_to 'Home', root_path %></li>
+          <li><%= link_to 'New Achievement', new_achievement_path %></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</nav>
 
-<%= yield %>
+<% if flash[:notice] %>
+  <div class="alert alert-info"><%= flash[:notice]%></div>
+<% end %>
+
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
